fixed few styles as per figma design and wrapped up content

--- a/components/styles/menustyles.css
+++ b/components/styles/menustyles.css
@@ -12,7 +12,7 @@
 
 .logo__wrapper {
   display: flex;
-  height: 90px;
+  height: 88px;
   border-bottom: 1px solid #dbdbdb;
   justify-content: center;
   align-items: center;
