--- a/components/styles/nav_styles.css
+++ b/components/styles/nav_styles.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 5rem;
+  height: 88px;
   border-bottom: 1px solid #dbdbdb;
   position: relative;
 }
@@ -54,11 +54,10 @@
   }
 }
 
-@media (max-width: 1200px) {
-  .nav__icons {
-    display: none;
-  }
+.nav__icons{
+  height: 24px;
 }
+
 
 @media (max-width: 1200px) {
 
@@ -71,11 +70,11 @@
   display: flex;
   align-items: center;
   background-color: #f5f5f5;
-  width: 420px;
-  border-radius: 10px;
-  margin-left: 49px;
-  padding: 15px 20px;
-  height: 45px;
+  width: 26.25rem;
+  border-radius: 6px;
+  margin-left: 3.0625rem;
+  padding: 0.9375rem 1.25rem;
+  height: 2.8125rem;
 }
 
 .nav__searchinput {
@@ -88,6 +87,7 @@
 
 .nav__rightsection {
   display: flex;
+  align-items: center;
 }
 
 .nav__downarrow {
